unpackaged/main/default/objects/Payment_Transfer_ICS__c/Payment_Transfer_ICS__c.object-meta.xml
<CustomObject>
    <label>Payment Transfer</label>
    <nameField>
        <displayFormat>Pay Tf-{0000}</displayFormat>
        <label>Payment Transfer ICS No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Transfer</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>