unpackaged/main/default/objects/Payment_Transfer_ICS__c/fields/CSI_ICS_No__c.field-meta.xml
<CustomField>
    <fullName>CSI_ICS_No__c</fullName>
    <label>CSI ICS</label>
    <referenceTo>Customer_Service_Inquiries_ICS__c</referenceTo>
    <relationshipName>Payment_Transfer_ICS</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>