unpackaged/main/default/objects/Payment_Transfer_ICS__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <formula>CSI_ICS_No__r.Account_Name__r.Name</formula>
    <label>Customer Name</label>
    <type>Text</type>
</CustomField>