unpackaged/main/default/objects/Payment_Transfer_ICS__c/fields/Justification_for_Pymt_Transfer_Request__c.field-meta.xml
<CustomField>
    <fullName>Justification_for_Pymt_Transfer_Request__c</fullName>
    <label>Justification for Pymt Transfer Request</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>