unpackaged/main/default/objects/Payment_Transfer_ICS__c/fields/Sales_Order_No__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order_No__c</fullName>
    <label>Sales Order #</label>
    <length>10</length>
    <type>Text</type>
</CustomField>