unpackaged/main/default/objects/Payment_Transfer_ICS__c/fields/Total_Payments_Currency__c.field-meta.xml
<CustomField>
    <fullName>Total_Payments_Currency__c</fullName>
    <formula>CSI_ICS_No__r.Payemnt_Transfer_Total_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Payments Currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>