unpackaged/main/default/objects/Payment_Transfer_ICS__c/fields/Transfer_Amount_No__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Amount_No__c</fullName>
    <label>Transfer Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>