unpackaged/main/default/objects/Payment_Transfer_ICS__c/fields/Transfer_From_Account_s__c.field-meta.xml
<CustomField>
    <fullName>Transfer_From_Account_s__c</fullName>
    <label>Transfer From Account(s)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>