unpackaged/main/default/objects/Payment_Transfer_ICS__c/validationRules/ICS_PaymentTransfer_Cannot_be_Modified.validationRule-meta.xml
<ValidationRule>
    <fullName>ICS_PaymentTransfer_Cannot_be_Modified</fullName>
    <active>true</active>
    <errorConditionFormula>AND( OR
(
ISPICKVAL(  CSI_ICS_No__r.Case_Approval_Status__c , &#39;Case Approved&#39;),
ISPICKVAL( CSI_ICS_No__r.Case_Approval_Status__c , &#39;Requestor Submitted&#39; ), 
ISPICKVAL( CSI_ICS_No__r.Case_Approval_Status__c , &#39;LOB Submitted&#39; ), 
ISPICKVAL( CSI_ICS_No__r.Case_Approval_Status__c , &#39;F&amp;R Submitted&#39; ), 
ISPICKVAL( CSI_ICS_No__r.Case_Approval_Status__c , &#39;AR1 Submitted&#39; ), 
ISPICKVAL( CSI_ICS_No__r.Case_Approval_Status__c , &#39;AR2 Submitted&#39; ) 
),
OR(ISCHANGED( Transfer_Amount__c ), 
ISCHANGED( Sales_Order__c ),  
ISCHANGED( Receipt__c ), 
ISCHANGED( Order_Status__c ), 
ISCHANGED( Justification_for_Pymt_Transfer_Request__c )
))</errorConditionFormula>
    <errorMessage>Case is Already Submitted for Approval. 
You don&#39;t have access to Modify.</errorMessage>
</ValidationRule>